--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,115 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+* {
+  margin: 0;
+  border: none;
+  padding: 0;
+  color: white;
+  font-family: "Open Sans", sans-serif;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5em 3em;
+  color: white;
+}
+
+header .menu ul {
+  display: flex;
+  gap: 3em;
+}
+
+header .menu ul > * {
+  display: flex;
+  align-items: center;
+}
+
+header .menu ul button {
+  background-color: white;
+  padding: 0.5em 1.5em;
+  border-radius: 20px;
+}
+
+.sectionUno {
+  background: linear-gradient(to left, #b86bf9, #f579c1);
+}
+
+.showcase {
+  display: flex;
+  align-items: center;
+  padding: 5% 1em 0 0;
+}
+
+.showcase .sc-content {
+  padding: 0 8%;
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+
+.showcase .sc-content h1 {
+  font-size: 3.6rem;
+}
+
+.showcase .sc-content p {
+  font-size: 1.1rem;
+}
+
+.btn {
+  transition: all 0.3s ease-in-out;
+}
+
+.btn {
+  margin: 0.5em 0.2em;
+  padding: 0.4rem 1rem;
+  border-radius: 50px;
+  background-image: linear-gradient(135deg, #7699ff 0%, #4fc7fc 100%);
+  box-shadow: 0 20px 30px -6px rgba(238, 103, 97, 0.5);
+  outline: none;
+  cursor: pointer;
+  border: none;
+  font-size: 1.2em;
+  color: white;
+}
+
+.btn:hover {
+  transform: translateY(3px);
+  box-shadow: none;
+}
+
+.btn:active {
+  opacity: 0.5;
+}
+
+.f-titulo h2 {
+  color: #9899ec;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.f-titulo p {
+  width: 40%;
+  margin: 1em auto;
+  color: #000;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.feature-content > * {
+    display: flex;
+    flex-direction: column;
+    color: #000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.features-cards {
+    display: flex;
+    gap: 1em;
+    width: 75%;
+    margin: auto;
+    text-align: center;
 }
 
-.card {
-  padding: 2em;
+.features-cards > * {
+    margin: 1em;
 }
 
-.read-the-docs {
-  color: #888;
+.feature-image {
+    border: solid 1px red;
 }
